[package]
name = "todotui"
version = "0.1.0"
edition = "2021"
authors = ["Hrishikesh Pingle"]
description = "TUI for your tasks"
repository = "https://github.com/Blaeriz/todotui"
keywords = ["cli", "tool", "utility", "todo", "tui"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
home = "0.5.11"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.5"
